--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-picker/picker": "^2.6.1",
     "expo": "~50.0.6",
+    "expo-font": "~11.10.3",
+    "expo-sms": "~11.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3",
+    "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
-    "expo-font": "~11.10.3"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
