--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
     "expo": "~50.0.6",
     "expo-font": "~11.10.3",
     "expo-sms": "~11.7.1",
@@ -19,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
