--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "axios": "^1.6.8",
     "expo": "~50.0.6",
     "expo-font": "~11.10.3",
     "expo-sms": "~11.7.1",
